artifacts/oidc/authz-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  hostnames:
  - httpbin.esuez.org
  parentRefs:
  - name: eg
    sectionName: https
  rules:
  - matches:
    - path:
        type: Exact
        value: /headers
    - path:
        type: Exact
        value: /oauth2/callback
    - path:
        type: Exact
        value: /logout
    backendRefs:
    - name: httpbin
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
      - name: x-access
        value: "privileged"
    backendRefs:
    - name: httpbin
      port: 8000
  - backendRefs:
    - name: invalid-backend
      port: 8080
